--- a/addons/editor-theme3/forums/color_on_white.css
+++ b/addons/editor-theme3/forums/color_on_white.css
@@ -21,6 +21,7 @@ svg[class*="scratchblocks-style-scratch3"] .sb3-obsolete {
   fill: white;
   stroke: var(--editorTheme3-commentColor);
 }
+svg[class*="scratchblocks-style-scratch3"] .sb3-label,
 #sb3-dropdownArrow path,
 #sb3-loopArrow path[fill="#fff"],
 #sb3-turnLeft path[fill="#fff"],
